# AWS_plugin

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  kafka_plugin.cpp  kinesis_producer.cpp
include/eosio/kinesis_plugin/: kinesis_producer.hpp
